<resources>
    <string name="app_name">HiatusApp</string>

    <string name="contribuer"> C\'est parti !</string>

    <!-- General usage strings -->
    <string name="yes">Oui</string>
    <string name="no">Non</string>


    <!-- related to login or register -->
    <string name="prompt_email">Adresse email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="error_invalid_email">Cette adresse email n\'est pas valide</string>
    <string name="error_invalid_password">Ce mot de passe est trop court</string>
    <string name="error_incorrect_password">Mot de passe incorrect</string>
    <string name="error_field_required">Ce champ est obligatoire</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Se connecter</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="register_link">Créer un compte</string>
    <string name="bad_credentials_message">L\'adresse e-mail ou le mot de passe est incorrect. Veuillez réessayer.</string>

    <!-- Strings related to admin login -->
    <string name="prompt_which_role_title">Choix de votre rôle</string>
    <string name="prompt_which_role_message">Souhaitez-vous vous connecter en tant qu\'administrateur ou en tant que simple utilisateur ?</string>
    <string name="prompt_which_role_admin">Administrateur</string>
    <string name="prompt_which_role_user">Utilisateur</string>

    <!-- Strings related to register -->
    <string name="title_activity_register">Créer un compte</string>
    <string name="prompt_fullname">Nom</string>
    <string name="action_register">Créer un compte</string>
    <string name="login_link">J\'ai déjà un compte, me connecter</string>

    <!-- Strings related to menu home section -->
    <string name="menu_home_section_description">Toutes les contributions en cours</string>

    <!-- Strings related to menu history section -->
    <string name="menu_history_section_description">Les contributions auxquelles vous avez participé</string>

    <!-- Strings related to the profile section -->
    <string name="prefs_user_profile">Mon profil</string>
    <string name="menu_profile_section_fullname_summary">Modifier vos nom et prénom</string>
    <string name="menu_profile_section_email_summary">Modifier votre addresse email</string>
    <string name="menu_profile_section_password_summary">Modifier votre mot de passe</string>
    <string name="confirm_signout_title">Déconnexion</string>
    <string name="confirm_signout_message">Êtes-vous sûrs de vouloir vous déconnecter ?</string>

    <!-- Bottom navigation Menu items -->
    <string name="title_activity_bottom_navigation">Hiatus</string>
    <string name="title_home">Accueil</string>
    <string name="title_history">Historique</string>
    <string name="title_profile">Profil</string>
    <string name="title_activity_db_contribution_context_test">DbContributionContextTest</string>

    <!-- Admin section strings -->
    <string-array name="spinner_types">
        <item>Texte</item>
        <item>Photo</item>
    </string-array>
    <string name="admin_add_contribution">Ajouter une contribution</string>
    <string name="admin_quit">Quitter</string>
    <string name="admin_all_contributions">Les contributions en cours</string>
    <string name="admin_closed_contributions">Les contributions fermées</string>
    <string name="admin_add_title">Titre</string>
    <string name="admin_add_type">Type</string>
    <string name="admin_add_number">Nombre de caractères \t</string>
    <string name="admin_add_theme">Thème</string>
    <string name="admin_add_instructions">Instructions</string>
    <string name="admin_send">Envoyer</string>
    <string name="admin_stop_context">Arrêter ce contexte</string>
    <string name="admin_deny">Refuser</string>
    <string name="admin_accept">Accepter</string>

    <!-- Photo and text Activity section strings -->
    <string name="add_title">Ajouter un titre</string>
    <string name="send">Envoyer</string>
    <string name="take_photo">Prendre une photo</string>
    <string name="preview">Preview</string>
    <string name="modify">Modifier</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
