<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hiatus.hiatusapp.RegisterActivity"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDarker">

            <!-- header with Hiatus logo -->
            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:paddingTop="50dp"
                android:paddingBottom="30dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/header_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:src="@drawable/logo_hiatus_blanc_header" />
            </LinearLayout>

            <!-- Login form -->
            <LinearLayout
                android:id="@+id/email_register_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <!-- Full name -->
                <EditText
                    android:id="@+id/fullname"
                    style="@style/LoginField"
                    android:hint="@string/prompt_fullname"
                    android:inputType="textPersonName"/>

                <!-- Email -->
                <AutoCompleteTextView
                    android:id="@+id/email"
                    style="@style/LoginField"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"/>

                <!-- Password -->
                <EditText
                    android:id="@+id/password"
                    style="@style/LoginField"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" />

                <!-- Sign in button -->
                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/action_register"
                    android:textColor="@color/white"
                    android:background="@drawable/accent_button"
                    android:textStyle="bold" />

                <!-- Register link -->
                <TextView
                    android:id="@+id/login_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/login_link"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>